Minor stylistic edits since previous commit

--- a/Social Media Project-Personal/index.css
+++ b/Social Media Project-Personal/index.css
@@ -18,9 +18,20 @@ h1 {
   width: 10%;
 }
 
+#PlayButton {
+  text-align: center;
+  padding: 12px 30px;
+  border-radius: 8px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  position:
+}
+
 #contactDiv {
   border-style: solid;
   background-color: green;
+  width: 30%;
+  position: relative;
+  top: 300px;
 }
 
 #gameOptions {
