--- a/FreeJack-GitRep/index.css
+++ b/FreeJack-GitRep/index.css
@@ -1,5 +1,6 @@
 body {
-  background-image: url("https://us.123rf.com/450wm/yamabikay/yamabikay1611/yamabikay161100036/65548889-poker-table-felt-background-high-resolution-photo-.jpg?ver=6");
+  background-image: url("https://cei.org/sites/default/files/bigstock-Poker-Background-62159249.jpg");
+  background-size: cover;
 }
 
 div {
@@ -9,29 +10,38 @@ h1 {
   width: 50%;
 }
 
+.flex-container{
+  display: flex;
+  justify-content: center;
+}
+
 #Title {
   font-family: "cursive",sans-serif;
 }
 
 #mainDiv {
-  background-image: url("https://us.123rf.com/450wm/yamabikay/yamabikay1611/yamabikay161100036/65548889-poker-table-felt-background-high-resolution-photo-.jpg?ver=6");
   width: 10%;
 }
 
 #PlayButton {
   text-align: center;
-  padding: 12px 30px;
+  padding: 20px 30px;
+  position: absolute;
+  top: 50%;
+  left: 40%;
   border-radius: 8px;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-  position:
 }
 
-#contactDiv {
+#aboutBox {
   border-style: solid;
   background-color: green;
-  width: 30%;
-  position: relative;
-  top: 10px;
+  background-size: auto;
+  width: 350px;
+  
+  top: 80%;
+  right: 30%;
+  position: absolute;
 }
 
 #gameOptions {
@@ -40,6 +50,3 @@ h1 {
   top: 400px;
 }
 
-#playHeader {
-  font-family: cursive;
-}
